--- a/6-SSD/assets/css/style.css
+++ b/6-SSD/assets/css/style.css
@@ -102,6 +102,17 @@ h2 {
   padding: 0 0 0 60px;
   background: url(../images/ico_literature.png) 0 -3px no-repeat;
 }
+
+#cust_link {
+  height: 48px;
+  font: 18px/20px "Trebuchet MS", Arial, sans-serif;
+  color: #D83F35;
+  padding: 0 0 0 60px;
+  background: url(../images/ico_video.png) no-repeat;  
+  display: flex;
+  align-items: center;
+}
+
   #video_link:hover, #literature_link:hover {
     text-decoration: underline;
   }
@@ -275,8 +286,20 @@ h2 {
   color: #555;
   text-align: center;
   line-height: 24px;
-  float: left;
   margin: 10px 0 0 0;
+  float: left;
+}
+
+#cust_footer {
+  width: 100%;
+  border-top: 1px solid #999;
+  font-size: 14px;
+  color: #555;
+  text-align: center;
+  line-height: 24px;
+  margin: 10px 0 0 0;
+  display: flex;
+  justify-content: space-around;
 }
   #footer .text_bru {
     margin: 14px 0 6px 0;
